test_regress/t/t_class_extends_bad.out
%Error: t/t_class_extends_bad.v:12:26: Multiple inheritance illegal on non-interface classes (IEEE 1800-2017 8.13), and unsupported for interface classes.
class Cls extends Base1, Base2;
                         ^~~~~
%Error: Exiting due to
